# VideoCenter

./: .env.development.example  .env.example  .env.production.example  .env.testing.example  .gitignore  .pre-commit-config.yaml  README.md  alembic.ini  pyproject.toml  requirements-dev.txt  requirements.txt
docs/: README.md  analysis-task-progress-retry.md  api-error-response.md  api-integration-testing.md  audio-subtitle-stream-information.md  automatic-batch-video-analysis.md  background-incremental-media-scan.md  background-task-progress-cancellation.md  background-task-recovery.md  background-task-retry-logs-cleanup.md  background-task-websocket.md  database-migrations.md  download-completion-notifications.md  download-concurrency-priority-dedup-naming.md  download-destination-integrity-registration.md  download-media-status-logging-recovery.md  download-quality-format-subtitles-thumbnail.md  download-queue-statuses.md  download-realtime-metrics.md  download-task-controls.md  downloader-interface.md  duplicate-parsing-and-parser-tests.md  environment-configuration.md  exception-handling.md  favorites-and-tags.md  ffmpeg-detection-configuration.md  frontend-api-client.md  frontend-base-layout.md  frontend-home-dashboard.md  frontend-initialization.md  generic-webpage-parser.md  github-actions.md  hls-progress-concurrency-cache.md  hls-transcoding-playback.md  http-direct-downloader.md  http-range-head-streaming.md  initial-database-migration.md  local-file-hash-duplicates.md  local-file-operations.md  local-resource-associations.md  (+45 more)
frontend/: .env.example  index.html  (+6 more)
(+225 files in other folders)
